--- a/JavaScriptGallery/gallery.css
+++ b/JavaScriptGallery/gallery.css
@@ -1,3 +1,50 @@
+
+/*Gallery Slide*/
+.GallerySlide{
+    width: 100%;
+    height: 100%;
+    position: relative;
+    overflow: hidden;
+}
+.GallerySlide img{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    right: -100%;
+}
+.GallerySlide .nav_left{
+  top: calc(50% - 24px);
+  position: absolute;
+  z-index: 99;
+  left: 10px;
+  cursor: pointer;
+}
+.GallerySlide .nav_right{
+  top: calc(50% - 24px);
+  position: absolute;
+  z-index: 99;
+  right: 10px;
+  cursor: pointer;
+}
+.fillForGallerySlide{
+    fill: black;
+}
+.GallerySlideDots{
+    width: 100%;
+    height: 20px;
+    margin-top: 5px;
+   text-align: center;
+}
+.GallerySlideDots .dot{
+    width: 20px;
+    height: 20px;
+    background-color: rgb(173, 173, 173);
+    border-radius: 360px;
+    display: inline-block;
+    margin: 0 5px;
+}
+
+/*GalleryJS*/
 .Gallery p{
     font-size: 30px;
     font-family: calibri,Arial , sans-serif;
